「恐らくランタイムの不具合で簡易サーバーが機能しない」問題を修正（Close YigtyORG/Exyzer#20）

--- a/src/Exyzer.Apps.Web/App.razor
+++ b/src/Exyzer.Apps.Web/App.razor
@@ -12,7 +12,7 @@
 	</Found>
 	<NotFound>
 		<LayoutView Layout="@typeof(MainLayout)">
-			<p>The page not found.</p>
+			<h1>The page not found.</h1>
 		</LayoutView>
 	</NotFound>
 </Router>
