拡張機能の読み込み処理を大幅に変更

--- a/src/TakymLib.UI/Views/PluginManagerView.xaml
+++ b/src/TakymLib.UI/Views/PluginManagerView.xaml
@@ -17,7 +17,7 @@
 	d:DesignHeight="450" d:DesignWidth="800">
 	<Grid>
 		<Grid.ColumnDefinitions>
-			<ColumnDefinition/>
+			<ColumnDefinition MaxWidth="300"/>
 			<ColumnDefinition/>
 		</Grid.ColumnDefinitions>
 		<TreeView Grid.Column="0" ItemsSource="{Binding PluginTree}" SelectedItemChanged="TreeView_SelectedItemChanged">
